# arena-unifei-hydro-ros-pkg

./: CMakeLists.txt  package.xml  package.xml~  robots.dia  robots.dia.autosave
include/: AmigoBot.h  ArenaUnifei.h  ArenaUnifei.h~  Festo.h  P3_DX.h  P3_DX.h~  Pioneer.h  Pioneer.h~  Robot.h  Robot.h~  Robotino.h  Robotino.h~
include/br/edu/unifei/expertinos/arena/: LRO.h
include/br/edu/unifei/expertinos/robots/: AmigoBot.h  Festo.h  P3_DX.h  Pioneer.h  Robot.h  Robotino.h
launch/: arena.launch~  arena_unifei.launch  arena_unifei_p3_dx.launch  festo.launch~  pioneer.launch  pioneer.launch~  run_all_up.launch  three_robots.launch~
machine/: p3_dx.machine
src/: AmigoBot.cpp  AmigoBot.cpp~  ArenaUnifei.cpp  Festo.cpp  Festo.cpp~  LRO.cpp  P3_DX.cpp  P3_DX.cpp~  Pioneer.cpp  Pioneer.cpp~  Robot.cpp  Robot.cpp~  Robotino.cpp  Robotino.cpp~  arena_unifei_node.cpp  arena_unifei_node.cpp~
