<?xml version="1.0"?>
<package>
  	<name>arena_unifei</name>
  	<version>1.0.0</version>
  	<description>The arena_unifei package</description>
	<maintainer email="adrianohrl@gmail.com">Adriano Henrique Rossette Leite</maintainer>
	<license>BSD</license>

  	<buildtool_depend>catkin</buildtool_depend>

  	<build_depend>geometry_msgs</build_depend>
  	<build_depend>nav_msgs</build_depend>
	<build_depend>robotino_node</build_depend>
 	<build_depend>roscpp</build_depend>
  	<build_depend>std_msgs</build_depend>
	<build_depend>tf</build_depend>

  	<run_depend>geometry_msgs</run_depend>
  	<run_depend>nav_msgs</run_depend>
  	<run_depend>roscpp</run_depend>
  	<run_depend>std_msgs</run_depend>
	<run_depend>robotino_node</run_depend>
	<run_depend>tf</run_depend>

  	<export>
  	</export>
</package>
